# Silicon

./: .gitignore  CMakeLists.txt  README.md
READMES/: Phase1.md  Phase2.md
core/: agent.cpp  scheduler.cpp  scheduler.hpp  session_manager.cpp  session_manager.hpp
debugs/: debug.cpp  debug.hpp  output.txt
enforcement/: filesystem_enforcer.cpp  filesystem_enforcer.hpp  network_enforcer.cpp  network_enforcer.hpp  process_enforcer.cpp  process_enforcer.hpp
installer/: com.nagrajmg.silicon.plist
logging/: logger.cpp  logger.hpp
policies/: allowed_domains.txt  allowed_processes.txt  policy_loader.cpp  policy_loader.hpp  protected_paths.txt
